syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CategoryResponse {
    Category category = 1;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message GetCategoryRequest {
    string id = 1;
}

message ListCategoryRequest {
    optional string courseID = 1;
}

message ListCategoryResponse {
    repeated Category categories = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (ListCategoryResponse) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream CategoryResponse) {}
    rpc GetCategory(GetCategoryRequest) returns (CategoryResponse) {}
    rpc ListCategory(ListCategoryRequest) returns (ListCategoryResponse) {}
}
